--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    
-   <url>https://github.com/davidalayachew</url>
+   <url>https://github.com/davidalayachew/HowFastCanYouType</url>
 
    <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
